# flatsearch

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTES.md  README.md  mkdocs.yml  pyproject.toml  setup.py  version_bump.py
.github/workflows/: main.yml
docs/: index.md  modules.md
flatsearch/: __main__.py  main.py  version.py
tests/: test_foo.py  test_main.py
